// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RecentSearches stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  >
    <div>
      <div
        class="text-sm font-semibold text-muted-foreground tracking-wide mb-2 pl-12"
      >
        Recent Searches
      </div>
      <div
        class="-mx-6"
      >
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          boots
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          sneakers
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          Clear recent searches
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RecentSearches stories snapshot > Empty story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  />
</div>
`;

exports[`RecentSearches stories snapshot > ManySearches story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  >
    <div>
      <div
        class="text-sm font-semibold text-muted-foreground tracking-wide mb-2 pl-12"
      >
        Recent Searches
      </div>
      <div
        class="-mx-6"
      >
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          boots
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          sneakers
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          sandals
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          flip flops
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          running shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          hiking boots
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          dress shoes
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          Clear recent searches
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`RecentSearches stories snapshot > SingleSearch story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-6"
  >
    <div>
      <div
        class="text-sm font-semibold text-muted-foreground tracking-wide mb-2 pl-12"
      >
        Recent Searches
      </div>
      <div
        class="-mx-6"
      >
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          laptop
        </button>
        <button
          class="w-full text-left px-12 py-2 hover:bg-accent text-sm font-medium text-header-foreground"
          type="button"
        >
          Clear recent searches
        </button>
      </div>
    </div>
  </div>
</div>
`;
